fixed alignments

--- a/src/frontEnd/src/App.css
+++ b/src/frontEnd/src/App.css
@@ -1,3 +1,36 @@
+.App {
+	position: relative;
+}
+.sources-button {
+	position: absolute;
+	left: 0%;
+	top: 0%;
+}
+.categories-button {
+	position: absolute;
+	right: 0%;
+	top: 0%;
+}
+
+.sources-expanded-container {
+	display: flex;
+	justify-content: center !important;
+	align-items: center !important;
+	flex-wrap: wrap !important;
+}
+
+.category-link {
+	margin: 5px;
+	height: 5vh;
+	max-width: 120px;
+	width: 15vw;
+}
+.category-link > button {
+	height: inherit;
+	max-width: inherit;
+	width: inherit;
+}
+
 /* Source News Logo */
 .logo-img {
 	height: 100px;
@@ -13,7 +46,7 @@
 	width: 116.85px;
 	padding-left: 5px;
 	padding-right: 5px;
-	border-radius: 20%;
+	border-radius: 20px;
 }
 
 /* Search bar */
